RESOLVED FIXED86925
[GTK] REGRESSION(r116135): Keys that confirm composition trigger a default action
https://bugs.webkit.org/show_bug.cgi?id=86925
Summary [GTK] REGRESSION(r116135): Keys that confirm composition trigger a default ac...
Martin Robinson
Reported 2012-05-18 16:52:16 PDT
When completing a composition with a key press it triggers the default action. An example of this is finish a compose sequence with space bar causing the page to scroll.
Attachments
Patch (10.35 KB, patch)
2012-05-19 10:20 PDT, Martin Robinson
gustavo: review+
Martin Robinson
Comment 1 2012-05-19 10:20:16 PDT
Gustavo Noronha (kov)
Comment 2 2012-05-21 12:17:33 PDT
Comment on attachment 142873 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=142873&action=review Thanks =) > Source/WebCore/ChangeLog:13 > + * platform/gtk/CompositionResults.h: Instead of holding composition results, just hold > + hold a flag describing whether or not this event had results. too much hold > Source/WebKit/gtk/WebCoreSupport/WebViewInputMethodFilter.cpp:63 > + PlatformKeyboardEvent platformEvent(event, CompositionResults(CompositionResults::WillSendCompositionResultsSoon)); Nice trick to make the code more readable =)
Martin Robinson
Comment 3 2012-05-22 11:36:44 PDT
Note You need to log in before you can comment on or make changes to this bug.