[GTK] REGRESSION(r116135): Keys that confirm composition trigger a default action https://bugs.webkit.org/show_bug.cgi?id=86925

Reviewed by Gustavo Noronha Silva.

Source/WebCore:

No new tests. Creating tests for GTK+ input methods is quite difficult, as they
can differ from machine to machine. It's also hard to simulate composition
sequences.

* platform/gtk/CompositionResults.h: Instead of holding composition results, just
keep a flag describing whether or not this event had results.
(CompositionResults):

Source/WebKit/gtk:

Instead of sending composition results with a keydown event, simply send whether
or not the event had results. Activate the results after processing the event. This
allows for input methods to modify the DOM after the keydown event and to still
prevent the default action during handleInputMethodKeydown.

* WebCoreSupport/EditorClientGtk.cpp:
(WebKit::EditorClient::respondToChangedSelection): This patch removes the m_updatingComposition
so we no longer have to check it here.
(WebKit::EditorClient::keyboardEventHadCompositionResults): Added.
(WebKit::EditorClient::handleInputMethodKeydown): Now prevent the default action when
the keyboard event had composition results.
(WebKit::EditorClient::EditorClient):
* WebCoreSupport/EditorClientGtk.h: Remove the m_updatingComposition member, as it's no
longer used.
* WebCoreSupport/WebViewInputMethodFilter.cpp:
(WebKit::WebViewInputMethodFilter::sendKeyEventWithCompositionResults): Now send the
composition results after the key event.

Canonical link: https://commits.webkit.org/104860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118010 268f45cc-cd09-0410-ab3c-d52691b4dbfc